--- a/dead-lock/pom.xml
+++ b/dead-lock/pom.xml
@@ -5,19 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>telran.multithreading</groupId>
-    <artifactId>racers-game</artifactId>
+    <artifactId>dead-lock-appl</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>telran.view</groupId>
-            <artifactId>cli-view</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 
 </project>
