--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Main",
             "request": "launch",
+            "mainClass": "telran.bullsandcowls.Main",
+            "projectName": "bulls-and-cows"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "telran.employees.Main",
+            "projectName": "db-creator"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
             "mainClass": "telran.multithreading.Main",
             "projectName": "dead-lock"
         },
