--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,40 +1,15 @@
+// Use IntelliSense to learn about possible attributes.
+// Hover to view descriptions of existing attributes.
+// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 {
     "version": "0.2.0",
     "configurations": [
         {
             "type": "java",
-            "name": "Main - Bulls and Cows",
+            "name": "Main",
             "request": "launch",
-            "mainClass": "telran.bullsandcowls.Main",
-            "projectName": "bulls-and-cows"
-        },
-        {
-            "type": "java",
-            "name": "Main - DB Creator",
-            "request": "launch",
-            "mainClass": "telran.employees.Main",
-            "projectName": "db-creator"
-        },
-        {
-            "type": "java",
-            "name": "Main - Dead Lock",
-            "request": "launch",
-            "mainClass": "telran.multithreading.Main",
-            "projectName": "dead-lock"
-        },
-        {
-            "type": "java",
-            "name": "Main - Game Racer Threads",
-            "request": "launch",
-            "mainClass": "telran.multithreading.Main",
-            "projectName": "game-racer-threads"
-        },
-        {
-            "type": "java",
-            "name": "Main - Company Application",
-            "request": "launch",
-            "mainClass": "telran.employees.Main",
-            "projectName": "company-application"
+            "mainClass": "telran.queries.Main",
+            "projectName": "jpql-query-tool"
         },
         {
             "type": "java",
@@ -44,43 +19,10 @@
         },
         {
             "type": "java",
-            "name": "Main - CLI View",
+            "name": "Main",
             "request": "launch",
-            "mainClass": "telran.view.Main",
-            "projectName": "cli-view"
-        },
-        {
-            "type": "java",
-            "name": "Code Comments Separation",
-            "request": "launch",
-            "mainClass": "telran.persistence.CodeCommentsSeparation",
-            "projectName": "persistence-files"
-        },
-        {
-            "type": "java",
-            "name": "Main - Stream Operations",
-            "request": "launch",
-            "mainClass": "telran.stream.Main",
-            "projectName": "telran.stream-stream-operations"
-        },
-        {
-            "type": "java",
-            "name": "Main - Print Calendar",
-            "request": "launch",
-            "mainClass": "telran.time.Main",
-            "projectName": "telran.time-print-calendar"
-        },
-        {
-            "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}"
-            ],
-            "name": "Launch Extension",
-            "outFiles": [
-                "${workspaceFolder}/out/**/*.js"
-            ],
-            "preLaunchTask": "npm",
-            "request": "launch",
-            "type": "extensionHost",
+            "mainClass": "telran.queries.Main",
+            "projectName": "jpql-query-tool",
             "env": {
                 "POSTGRES_HOST": "54.210.134.88",
                 "POSTGRES_PASSWORD": "Qazzaq123"
