--- a/Node-Project/js-introduction/package.json
+++ b/Node-Project/js-introduction/package.json
@@ -1,9 +1,8 @@
 {
   "name": "js-introduction",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
