--- a/Node-Project/node-introduction/package.json
+++ b/Node-Project/node-introduction/package.json
@@ -10,5 +10,8 @@
     "description": "",
     "devDependencies": {
         "vitest": "^2.1.8"
+    },
+    "dependencies": {
+        "winston": "^3.17.0"
     }
 }
