--- a/Node-Project/node-introduction/package.json
+++ b/Node-Project/node-introduction/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "node-introduction",
+    "name": "introduction",
     "version": "1.0.0",
+    "main": "index.js",
     "scripts": {
-        "test": "vitest"
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "devDependencies": {
-        "vitest": "^2.1.8"
+      "vitest": "^3.0.4"
     },
     "dependencies": {
-        "winston": "^3.17.0"
+      "winston": "^3.17.0"
     }
-}
+  }
