--- a/Node-Project/express/package.json
+++ b/Node-Project/express/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
+    "bcrypt": "^5.1.1",
+    "config": "^3.3.12",
+    "express": "^4.21.2",
+    "joi": "^17.13.3",
+    "joi-password": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0"
   },
   "name": "express",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/controller/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
