--- a/Node-Project/movie-coments/package.json
+++ b/Node-Project/movie-coments/package.json
@@ -16,11 +16,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
-    "winston": "^3.17.0",
-    "joi": "^17.4.2"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "chai": "^5.2.0",
