--- a/micro/template.yaml
+++ b/micro/template.yaml
@@ -42,7 +42,7 @@ Resources:
       Policies:
         - Statement:
           - Effect: Allow
-            Resource: '*'
+            Resource: '*' 
             Action:
             - dynamodb:*
       Environment:
@@ -94,7 +94,7 @@ Resources:
         - AttributeName: patientId
           AttributeType: N
         - AttributeName: timestamp
-          AttributeType: N
+          AttributeType: N     
       ProvisionedThroughput:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
@@ -112,9 +112,85 @@ Resources:
         - AttributeName: patientId
           AttributeType: N
         - AttributeName: timestamp
-          AttributeType: N
+          AttributeType: N     
       ProvisionedThroughput:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
       StreamSpecification:
-        StreamViewType: NEW_IMAGE
+        StreamViewType: NEW_IMAGE        
+  AbnormalValuesDataStream:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      KeySchema:
+        - AttributeName: patientId
+          KeyType: HASH
+        - AttributeName: timestamp
+          KeyType: RANGE
+      AttributeDefinitions:
+        - AttributeName: patientId
+          AttributeType: N
+        - AttributeName: timestamp
+          AttributeType: N     
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      StreamSpecification:
+        StreamViewType: NEW_IMAGE 
+  PulseAbnormalValuesRecognizerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: abnormal-values-recognizer
+      Handler: telran.monitoring.AppAbnormalRecognizer::handleRequest
+      FunctionName: abnormal-values-recognizer
+      Policies:
+        - Statement:
+          - Effect: Allow
+            Resource: '*' 
+            Action:
+            - dynamodb:*
+      Environment:
+        Variables:
+          LOGGER_LEVEL: finest
+          STREAM_NAME: !Ref AbnormalValuesDataStream
+          RANGE_PROVIDER_CLASS: telran.monitoring.RangeProviderClientHttp
+          STREAM_CLASS_NAME: telran.monitoring.DynamoDbAbnormalPulseValueStream
+          RANGE_PROVIDER_URL: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/range/"
+      Events:
+        DynamoDbItemInsert:
+          Type: DynamoDB
+          Properties:
+            StartingPosition: LATEST
+            BatchSize: 1
+            Stream: !GetAtt PulseValuesStream.StreamArn
+            FilterCriteria:
+              Filters:
+              - Pattern: '{"eventName": ["INSERT"]}'      
+  RangeDataProviderFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: range-data-provider
+      Handler: telran.monitoring.AppRangeDataProvider::handleRequest
+      
+      Environment: 
+        Variables:
+          DB_PASSWORD: 12345.Com
+      Events:
+        RangeDataProvider:
+          Type: Api 
+          Properties:
+            Path: /range
+            Method: get
+
+Outputs:
+  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
+  # Find out more about other implicit resources you can reference within SAM
+  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
+  RangeDataProviderApi:
+    Description: "API Gateway endpoint URL for Prod stage for Range Data Provider Function"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/range/"
+          
+          
+
+      
+        
+  
